src/manifests/observability/clickhouse/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: clickhouse
spec:
  selector:
    app: clickhouse
  ports:
  - name: http
    port: 8123
    targetPort: 8123
  - name: tcp
    port: 9000
    targetPort: 9000
  - name: metrics
    port: 8001
    targetPort: 8001
  type: ClusterIP
